# AMR-Fusion-Lab

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  INSTALL.md  README.md  RELEASE_NOTES_v0.2.0.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
examples/: amr_fusion.example.yaml  amrfinder_sample.tsv  resfinder_sample.tsv  rgi_sample.tsv
src/amr_fusion_lab/: ai_summary.py  cli.py  config.py  fusion.py  models.py  ontology.py  parsers.py  quality.py  reporting.py  scoring.py  validation.py
tests/: test_ai_summary.py  test_config.py  test_fusion.py  test_init_config.py  test_ontology.py  test_parsers.py  test_quality.py  test_scoring.py  test_validation.py
